--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "firebase": "^8.0.2",
     "pure-react-carousel": "^1.27.6",
+    "quill-delta": "^4.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
