--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
+    "redux": "^4.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
