--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^0.2.4"
