--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "4.0.0",
     "react-scroll": "^1.8.1",
     "react-slick": "^0.27.13",
+    "react-toastify": "^6.1.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
