--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "firebase": "^8.1.1",
+    "framer-motion": "^3.1.1",
     "pure-react-carousel": "^1.27.6",
     "quill-delta": "^4.2.2",
     "react": "^17.0.1",
