order link in sidemenu now redirects correctly to customersorders component

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "browser-image-compression": "^1.0.13",
     "firebase": "^8.1.1",
     "framer-motion": "^3.1.1",
+    "mailgun.js": "^2.0.6",
     "pure-react-carousel": "^1.27.6",
     "quill-delta": "^4.2.2",
     "react": "^17.0.1",
