--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "axios": "^0.21.1",
     "browser-image-compression": "^1.0.13",
     "firebase": "^8.1.1",
     "framer-motion": "^3.1.1",
