--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pure-react-carousel": "^1.27.6",
     "quill-delta": "^4.2.2",
     "react": "^17.0.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-quill": "^2.0.0-beta.2",
