--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-loading-skeleton": "^2.1.1",
     "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
