--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.1",
     "react-animations": "^1.0.0",
     "react-dom": "^17.0.1",
+    "react-howler": "^5.0.0",
     "react-loading-skeleton": "^2.1.1",
     "react-quill": "^2.0.0-beta.2",
     "react-redux": "^7.2.2",
@@ -28,6 +29,7 @@
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
+    "use-sound": "^2.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^0.2.4"
   },
